--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -14,28 +14,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from math import pi;\n",
     "def vol(rad):\n",
-    "    pass"
+    "    print(f\"Pi value:{pi}\")\n",
+    "    return (4/3)*pi*(rad**3);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pi value:3.141592653589793\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "33.49333333333333"
+       "33.510321638291124"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,32 +62,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    if num in range(low,high):\n",
+    "        print('{} is in range of {} and {}'.format(num,low,high))\n",
+    "    else:\n",
+    "        print('{} is not in range of {} and {}'.format(num,low,high))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 is in the range between 2 and 7\n"
+      "10 is in range of 2 and 12\n"
      ]
     }
    ],
    "source": [
     "# Check\n",
-    "ran_check(5,2,7)"
+    "ran_check(10,2,12)"
    ]
   },
   {
@@ -92,19 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    if num in range(low,high):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -113,13 +122,13 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ran_bool(3,1,10)"
+    "ran_bool(6,4,10)"
    ]
   },
   {
@@ -141,28 +150,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    L_count=0\n",
+    "    U_count=0\n",
+    "    for char in s:\n",
+    "        if char.isupper():\n",
+    "            U_count+=1\n",
+    "        elif char.islower():\n",
+    "            L_count+=1\n",
+    "    print('Number of Upper case letter is {}'.format(U_count))\n",
+    "    print('Number of Lower case letter is {}'.format(L_count))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "Number of Upper case letter is 4\n",
+      "Number of Lower case letter is 33\n"
      ]
     }
    ],
@@ -184,34 +198,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 95,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    my_list1=[]\n",
+    "    for num in lst:\n",
+    "        if num not in my_list1:\n",
+    "            my_list1.append(num)\n",
+    "        else:\n",
+    "            pass\n",
+    "    \n",
+    "    my_list1.sort()\n",
+    "    print('Sample List : {}'.format(lst))    \n",
+    "    print('Unique List : {}'.format(my_list1))\n",
+    "            \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample List : [1, 2, 2, 3, 1, 4, 3, 2, 6, 5, 8]\n",
+      "Unique List : [1, 2, 3, 4, 5, 6, 8]\n"
+     ]
     }
    ],
    "source": [
-    "unique_list([1,1,1,1,2,2,3,3,3,3,4,5])"
+    "unique_list([1,2,2,3,1,4,3,2,6,5,8])"
    ]
   },
   {
@@ -227,19 +248,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 109,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def multiply(numbers):  \n",
-    "    pass"
+    "def multiply(numbers):\n",
+    "    nums=1\n",
+    "    for num in numbers:\n",
+    "        nums=num*nums\n",
+    "    return nums    \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +271,7 @@
        "-24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,34 +292,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 84,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    s=s.replace(' ', '')\n",
+    "    print(s)\n",
+    "    return s==s[::-1]\n",
+    "    \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helleh\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "palindrome('helleh')"
+    "palindrome('helle h')"
    ]
   },
   {
@@ -320,32 +352,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 78,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "\n",
-    "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "def ispangram(str1, alphabet=string.ascii_lowercase ,big_alpha=string.ascii_uppercase):\n",
+    "    str1=str1.replace(' ', '')\n",
+    "    str1.sort()\n",
+    "    return str1\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'ispangram' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-6a73ce3b8f69>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mispangram\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The quick brown fox jumps over the lazy dog\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ispangram' is not defined"
+     ]
     }
    ],
    "source": [
@@ -354,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -363,12 +397,13 @@
        "'abcdefghijklmnopqrstuvwxyz'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import string \n",
     "string.ascii_lowercase"
    ]
   },
@@ -380,6 +415,13 @@
    "source": [
     "#### Great Job!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -398,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
