--- a/04-Milestone Project - 1/00-Warm-Up-Project-Exercises.ipynb
+++ b/04-Milestone Project - 1/00-Warm-Up-Project-Exercises.ipynb
@@ -399,48 +399,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def user_choice():\n",
-    "    \n",
-    "    # This original choice value can be anything that isn't an integer\n",
     "    choice = 'wrong'\n",
     "    \n",
-    "    # While the choice is not a digit, keep asking for input.\n",
     "    while choice.isdigit() == False:\n",
     "        \n",
-    "        # we shouldn't convert here, otherwise we get an error on a wrong input\n",
-    "        choice = input(\"Choose a number: \")\n",
-    "    \n",
-    "    # We can convert once the while loop above has confirmed we have a digit.\n",
-    "    return int(choice)"
+    "        choice = input(\"Enter a number : \")\n",
+    "        \n",
+    "        if(choice.isdigit()==False):\n",
+    "            print(\"Entered number is not a digit,please enter again!\")\n",
+    "            \n",
+    "    return int(choice)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a number: hello\n",
-      "Choose a number: two\n",
-      "Choose a number: 2\n"
+      "Enter a number : i=ne\n",
+      "Entered number is not a digit,please enter again!\n",
+      "Enter a number : nine\n",
+      "Entered number is not a digit,please enter again!\n",
+      "Enter a number : 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,56 +533,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def user_choice():\n",
     "    \n",
-    "    # This original choice value can be anything that isn't an integer\n",
     "    choice = 'wrong'\n",
+    "    acceptable_range = range(0,10)\n",
+    "    choice_range = False\n",
     "    \n",
-    "    # While the choice is not a digit, keep asking for input.\n",
-    "    while choice.isdigit() == False:\n",
+    "    while choice.isdigit() == False or choice_range==False :\n",
+    "        choice = input(\"Enter a number (0-10):\")\n",
     "        \n",
-    "        # we shouldn't convert here, otherwise we get an error on a wrong input\n",
-    "        choice = input(\"Choose a number: \")\n",
-    "        \n",
-    "        if choice.isdigit() == False:\n",
-    "            # THIS CLEARS THE CURRENT OUTPUT BELOW THE CELL\n",
-    "            clear_output()\n",
+    "      \n",
+    "           \n",
     "            \n",
-    "            print(\"Sorry, but you did not enter an integer. Please try again.\")\n",
+    "        if choice.isdigit() == True:\n",
+    "            if int(choice) in acceptable_range:\n",
     "            \n",
-    "    \n",
-    "    # Optionally you can clear everything after running the function\n",
-    "    # clear_output()\n",
-    "    \n",
-    "    # We can convert once the while loop above has confirmed we have a digit.\n",
-    "    return int(choice)"
+    "                return int(choice)\n",
+    "            else:\n",
+    "                print(\"Entered number is not in valid range\")\n",
+    "        else:\n",
+    "             print(\"Please try again,enter a valid number!\")\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a number: 2\n"
+      "Enter a number (0-10):100\n",
+      "Entered number is not in valid range\n",
+      "Enter a number (0-10):nine\n",
+      "Please try again,enter a valid number!\n",
+      "Enter a number (0-10):9\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2"
+       "9"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,10 +803,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "game_list = [0,1,2]"
@@ -816,10 +812,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def display_game(game_list):\n",
@@ -829,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +831,7 @@
      "output_type": "stream",
      "text": [
       "Here is the current list\n",
-      "['hi', 'no', 2]\n"
+      "[0, 1, 2]\n"
      ]
     }
    ],
@@ -1009,7 +1003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
