--- a/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
+++ b/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
@@ -43,17 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
     "\n",
     "def display_board(board):\n",
+    "    clear_output()\n",
     "    \n",
-    "    pass"
+    "\n",
+    "    print(board[7]+' | '+board[8]+' | '+board[9])\n",
+    "    print('---------')\n",
+    "    print(board[4]+' | '+board[5]+' | '+board[6])\n",
+    "    print('---------')\n",
+    "    print(board[1]+' | '+board[2]+' | '+board[3])\n",
+    "        \n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -65,13 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  |   |  \n",
+      "---------\n",
+      "O | X | O\n",
+      "---------\n",
+      "  | O | X\n"
+     ]
+    }
+   ],
    "source": [
-    "test_board = ['#','X','O','X','O','X','O','X','O','X']\n",
+    "test_board = ['#',' ','O','X','O','X','O',' ',' ',' ']\n",
     "display_board(test_board)"
    ]
   },
@@ -84,15 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def player_input():\n",
-    "    \n",
-    "    pass"
+    "    marker=''\n",
+    "    while not (marker=='X' or marker=='O'):\n",
+    "        marker = input(\"Player 1: Do you want X or O ? \")\n",
+    "        \n",
+    "        if(marker==\"X\"):\n",
+    "            return [\"X\",\"O\"]\n",
+    "        else:\n",
+    "            return [\"O\",\"X\"]\n",
+    "            "
    ]
   },
   {
@@ -103,14 +125,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "player_input()"
+    "# player_input()"
    ]
   },
   {
@@ -122,15 +140,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def place_marker(board, marker, position):\n",
-    "    \n",
-    "    pass"
+    "    board[position] = marker"
    ]
   },
   {
@@ -142,11 +157,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  | $ |  \n",
+      "---------\n",
+      "O | X | O\n",
+      "---------\n",
+      "  | O | X\n"
+     ]
+    }
+   ],
    "source": [
     "place_marker(test_board,'$',8)\n",
     "display_board(test_board)"
@@ -161,15 +186,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def win_check(board, mark):\n",
+    "def win_check(board,mark):\n",
     "    \n",
-    "    pass"
+    "    return ((board[7] == mark and board[8] == mark and board[9] == mark) or # across the top\n",
+    "    (board[4] == mark and board[5] == mark and board[6] == mark) or # across the middle\n",
+    "    (board[1] == mark and board[2] == mark and board[3] == mark) or # across the bottom\n",
+    "    (board[7] == mark and board[4] == mark and board[1] == mark) or # down the middle\n",
+    "    (board[8] == mark and board[5] == mark and board[2] == mark) or # down the middle\n",
+    "    (board[9] == mark and board[6] == mark and board[3] == mark) or # down the right side\n",
+    "    (board[7] == mark and board[5] == mark and board[3] == mark) or # diagonal\n",
+    "    (board[9] == mark and board[5] == mark and board[1] == mark)) # diagonal\n",
+    "    "
    ]
   },
   {
@@ -181,11 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "win_check(test_board,'X')"
    ]
@@ -199,16 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
     "def choose_first():\n",
-    "    pass"
+    "    player_no=random.randint(1,2)\n",
+    "    print(f\"Player \"+str(player_no)+\" will go first\")\n",
+    "    return 'player'+str(player_no)\n"
    ]
   },
   {
@@ -220,35 +260,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def space_check(board, position):\n",
     "    \n",
-    "    pass"
+    "    return board[position] == ' '"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "**Step 7: Write a function that checks if the board is full and returns a boolean value. True if full, False otherwise.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def full_board_check(board):\n",
-    "    \n",
-    "    pass"
+    "    for i in range(1,10):\n",
+    "        if space_check(board,i):\n",
+    "            return False\n",
+    "    return True"
    ]
   },
   {
@@ -260,15 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def player_choice(board):\n",
+    "    position = 0\n",
     "    \n",
-    "    pass"
+    "    while position not in [1,2,3,4,5,6,7,8,9] or not space_check(board, position):\n",
+    "        position = int(input('Choose your next position: (1-9) '))\n",
+    "       \n",
+    "        \n",
+    "    return position\n",
+    "    "
    ]
   },
   {
@@ -280,15 +323,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def replay():\n",
-    "    \n",
-    "    pass"
+    "    play_decision=''\n",
+    "    while play_decision!='Y' or play_decision!='N':\n",
+    "        play_decision=input(\"Do you want to play again (Y or N:)\")      \n",
+    "        if (play_decision==\"Y\"):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False"
    ]
   },
   {
@@ -303,27 +349,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  |   |  \n",
+      "---------\n",
+      "O | X |  \n",
+      "---------\n",
+      "X | O | X\n"
+     ]
+    }
+   ],
    "source": [
     "print('Welcome to Tic Tac Toe!')\n",
     "\n",
-    "#while True:\n",
-    "    # Set the game up here\n",
-    "    #pass\n",
+    "game_on=True\n",
     "\n",
-    "    #while game_on:\n",
-    "        #Player 1 Turn\n",
+    "while True:\n",
+    "    # Set the game up here \n",
+    "    test_board = [' ',' ',' ',' ',' ',' ',' ',' ',' ',' ']\n",
+    "    display_board(test_board)\n",
+    "    print(\"Let's play the Tic Tac Toe game\")\n",
+    "    \n",
+    "    player1_marker,player2_marker = player_input()\n",
+    "    mylist = [player1_marker,player2_marker]\n",
+    "    print(mylist)\n",
+    "    \n",
+    "    turn = choose_first()\n",
+    "    \n",
+    "    \n",
+    "    play_game = input('Are you ready to play? Enter Yes or No.')\n",
+    "    \n",
+    "    if play_game.lower()[0] == 'y':\n",
+    "        game_on = True\n",
+    "    else:\n",
+    "        game_on = False\n",
     "        \n",
-    "        \n",
-    "        # Player2's turn.\n",
-    "            \n",
-    "            #pass\n",
+    "    while game_on:\n",
     "\n",
-    "    #if not replay():\n",
-    "        #break"
+    "\n",
+    "        if turn=='player1':\n",
+    "\n",
+    "            display_board(test_board)\n",
+    "            position = player_choice(test_board)\n",
+    "            place_marker(test_board,player1_marker,position)\n",
+    "\n",
+    "\n",
+    "            if win_check(test_board,player1_marker): #check if win\n",
+    "                display_board(test_board)\n",
+    "                print(\"Congratulations player1,you have won the game!\")\n",
+    "                game_on=False\n",
+    "            else:\n",
+    "                    if full_board_check(test_board):\n",
+    "                        display_board(test_board)\n",
+    "                        print('The game is a draw!')\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        turn = 'player2' \n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            display_board(test_board)\n",
+    "            position = player_choice(test_board)\n",
+    "            place_marker(test_board,player2_marker,position)\n",
+    "\n",
+    "\n",
+    "            if win_check(test_board,player2_marker): #check if win\n",
+    "                display_board(test_board)\n",
+    "                print(\"Congratulations player2,you have won the game!\")\n",
+    "                game_on=False\n",
+    "            else:\n",
+    "                    if full_board_check(test_board):\n",
+    "                        display_board(test_board)\n",
+    "                        print('The game is a draw!')\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        turn = 'player1' \n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -334,6 +442,74 @@
    "source": [
     "## Good Job!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -352,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
