--- a/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
+++ b/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
@@ -13,25 +13,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cmath\n",
+    "\n",
     "class Line:\n",
     "    \n",
     "    def __init__(self,coor1,coor2):\n",
-    "        pass\n",
+    "        self.coor1 = coor1\n",
+    "        self.coor2 = coor2\n",
+    "        \n",
     "    \n",
     "    def distance(self):\n",
-    "        pass\n",
+    "        x1,y1 = self.coor1\n",
+    "        x2,y2 = self.coor2\n",
+    "        \n",
+    "        dist = pow(x2-x1,2)+pow(y2-y1,2)\n",
+    "        return (dist**0.5)\n",
+    "        \n",
     "    \n",
     "    def slope(self):\n",
-    "        pass"
+    "        x1,y1 = self.coor1\n",
+    "        x2,y2 = self.coor2\n",
+    "        \n",
+    "        return ((y2-y1)/(x2-x1))\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +67,7 @@
        "9.433981132056603"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +87,7 @@
        "1.6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,25 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cylinder:\n",
     "    \n",
+    "    pi = 3.14\n",
+    "    \n",
     "    def __init__(self,height=1,radius=1):\n",
-    "        pass\n",
+    "        self.height = height\n",
+    "        self.radius = radius\n",
     "        \n",
     "    def volume(self):\n",
-    "        pass\n",
+    "        return Cylinder.pi*pow(self.radius,2)*self.height\n",
     "    \n",
     "    def surface_area(self):\n",
-    "        pass"
+    "        return (2*Cylinder.pi*self.radius*self.height)+(2*Cylinder.pi*pow(self.radius,2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +153,7 @@
        "56.52"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +173,7 @@
        "94.2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,6 +181,20 @@
    "source": [
     "c.surface_area()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -183,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
