--- a/07-Errors and Exception Handling/02-Errors and Exceptions Homework.ipynb
+++ b/07-Errors and Exception Handling/02-Errors and Exceptions Homework.ipynb
@@ -19,22 +19,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for ** or pow(): 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-c35f41ad7311>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'b'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'c'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for ** or pow(): 'str' and 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in ['a','b','c']:\n",
-    "    print(i**2)"
+    "try:\n",
+    "    for i in ['a','b','c']:\n",
+    "        print(i**2)\n",
+    "except:\n",
+    "    print(\"Please give the list of integers instead of string\")"
    ]
   },
   {
@@ -51,14 +42,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-6f985c4c80dd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZeroDivisionError : You cannot divide any integer with zero\n",
+      "All Done\n"
      ]
     }
    ],
@@ -66,7 +54,12 @@
     "x = 5\n",
     "y = 0\n",
     "\n",
-    "z = x/y"
+    "try:\n",
+    "    z = x/y\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"ZeroDivisionError : You cannot divide any integer with zero\")\n",
+    "finally:\n",
+    "    print(\"All Done\")"
    ]
   },
   {
@@ -84,7 +77,15 @@
    "outputs": [],
    "source": [
     "def ask():\n",
-    "    pass"
+    "    while True:\n",
+    "        try:\n",
+    "            val = int(input(\"Enter any integer: \"))\n",
+    "        except:\n",
+    "            print(\"Please enter valid integer\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            print(f\"Gotcha! Square of {val} is {val*val}\") \n",
+    "            break"
    ]
   },
   {
@@ -96,10 +97,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input an integer: null\n",
-      "An error occurred! Please try again!\n",
-      "Input an integer: 2\n",
-      "Thank you, your number squared is:  4\n"
+      "Enter any integer: three\n",
+      "Please enter valid integer\n",
+      "Enter any integer: two\n",
+      "Please enter valid integer\n",
+      "Enter any integer: 4\n",
+      "Gotcha! Square of 4 is 16\n"
      ]
     }
    ],
@@ -131,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
