Update 04-Function Practice Exercises - Solutions.ipynb
 changed sol of almost there

--- a/03-Methods and Functions/04-Function Practice Exercises - Solutions.ipynb
+++ b/03-Methods and Functions/04-Function Practice Exercises - Solutions.ipynb
@@ -388,7 +388,7 @@
    "outputs": [],
    "source": [
     "def almost_there(n):\n",
-    "    return ((abs(100 - n) <= 10) or (abs(200 - n) <= 10))"
+    "     return 89<n<111 or 189<n<211
    ]
   },
   {
