Update 07-Sets and Booleans.ipynb
Sets are an unordered collection of *unique* elements;
this sentence needs to be changed because , new version of python the built-in  set  type is inherently ordered.

--- a/00-Python Object and Data Structure Basics/07-Sets and Booleans.ipynb
+++ b/00-Python Object and Data Structure Basics/07-Sets and Booleans.ipynb
@@ -21,7 +21,8 @@
     "\n",
     "## Sets\n",
     "\n",
-    "Sets are an unordered collection of *unique* elements. We can construct them by using the set() function. Let's go ahead and make a set to see how it works"
+    "Sets was  an unordered collection of *unique* elements. But new python versions like new version of python like 3.8.5 ,the built-in  set  type is inherently ordered.
+    We can construct them by using the set() function. Let's go ahead and make a set to see how it works"
    ]
   },
   {
